[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenwarden"
version = "0.0.1"
description = "Local gateway that meters Claude API spend per agent and alerts on daily budgets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James F. Cruce" }]
keywords = ["anthropic", "claude", "billing", "monitoring", "agent", "proxy"]
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tokenwarden = "tokenwarden.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenwarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
