[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenwarden"
version = "0.0.1"
description = "Local gateway that meters Claude API spend per agent and alerts on daily budgets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James F. Cruce" }]
keywords = ["anthropic", "claude", "billing", "monitoring", "agent", "proxy"]
dependencies = [
    "starlette>=1.3,<2",
    "uvicorn>=0.49,<1",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tokenwarden = "tokenwarden.cli:main"

[project.urls]
Homepage = "https://github.com/Jmeg8r/tokenwarden"
Repository = "https://github.com/Jmeg8r/tokenwarden"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenwarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
